crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/astro_global.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.astro
```

## `file.astro`

```astro
---
const { some } = Astro.props
---
<div>{some}</div>
```

# Emitted Messages

```block
file.astro:2:9 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable some is unused.
  
    1 │ ---
  > 2 │ const { some } = Astro.props
      │         ^^^^
    3 │ ---
    4 │ <div>{some}</div>
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 warning.
```
