crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/astro_template_suppressions_allow_leading_trivia.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --error-on-warnings file.astro
```

## `biome.json`

```json
{
  "html": { "experimentalFullSupportEnabled": true },
  "linter": {
    "rules": {
      "preset": "none",
      "a11y": { "noAccessKey": "error" },
      "suspicious": { "noDebugger": "error" },
      "nursery": { "noAstroSetHtmlDirective": "error" }
    }
  }
}
```

## `file.astro`

```astro
{
/* biome-ignore lint/nursery/noAstroSetHtmlDirective: trusted content */}
<div set:html={content} />

{
  /* biome-ignore lint/nursery/noAstroSetHtmlDirective: trusted content */}
<div set:html={content} />

{
	/* biome-ignore lint/nursery/noAstroSetHtmlDirective: trusted content */}
<div set:html={content} />

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
