crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/astro_template_suppressions_have_one_owner.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --error-on-warnings file.astro
biome check --write --error-on-warnings --html-formatter-enabled=true file.astro
biome lint --error-on-warnings file.astro
```

## `biome.json`

```json
{
  "html": { "experimentalFullSupportEnabled": true },
  "linter": {
    "rules": {
      "preset": "none",
      "a11y": { "noAccessKey": "error" },
      "suspicious": { "noDebugger": "error" },
      "nursery": { "noAstroSetHtmlDirective": "error" }
    }
  }
}
```

## `file.astro`

```astro
{/* biome-ignore lint/nursery/noAstroSetHtmlDirective: trusted constants */}
<script
	is:inline
	type="application/ld+json"
	set:html={JSON.stringify({ name: "Example" })}
/>
<!-- biome-ignore lint/nursery/noAstroSetHtmlDirective: trusted content -->
<div set:html={content}></div>
{/* biome-ignore lint/a11y/noAccessKey: intentional shortcut */}
<a accesskey="w">WebAIM</a>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```

```block
Checked 1 file in <TIME>. Fixed 1 file.
```

```block
Checked 1 file in <TIME>. No fixes applied.
```
