crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/astro_template_suppressions_survive_host_fixes.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe file.astro
```

## `biome.json`

```json
{
  "html": { "experimentalFullSupportEnabled": true },
  "linter": {
    "rules": {
      "preset": "none",
      "a11y": { "noAccessKey": "error" },
      "suspicious": { "noDebugger": "error" },
      "nursery": { "noAstroSetHtmlDirective": "error" }
    }
  }
}
```

## `file.astro`

```astro
<div ></div>
{/* biome-ignore lint/a11y/noAccessKey: intentional shortcut */}
<div accesskey="b"></div>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
