crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/astro_template_suppressions_work_on_stdin.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe --stdin-file-path file.astro
```

## `biome.json`

```json
{
  "html": { "experimentalFullSupportEnabled": true },
  "linter": {
    "rules": {
      "preset": "none",
      "a11y": { "noAccessKey": "error" },
      "suspicious": { "noDebugger": "error" },
      "nursery": { "noAstroSetHtmlDirective": "error" }
    }
  }
}
```

# Input messages

```block
<div accesskey="a"></div>
{/* biome-ignore lint/a11y/noAccessKey: intentional shortcut */}
<div accesskey="b"></div>

```

# Emitted Messages

```block
<div ></div>
{/* biome-ignore lint/a11y/noAccessKey: intentional shortcut */}
<div accesskey="b"></div>

```
