crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/check_astro_template_use_optional_chain_write_unsafe.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.astro`

```astro
---
const post = { author: { name: "Biome" } };
const authorName = post?.author?.name;
---
<p>{post?.author?.name}</p>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
