crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/check_stdin_apply_unsafe_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
---
import {a as a} from 'mod';
import {    something } from "file.astro";
debugger;
statement ( ) ;
var foo: string = "";
---
<div></div>
```

# Emitted Messages

```block
---
import { something } from "file.astro";
import { a } from "mod";
statement();
const foo = "";
---
<div></div>
```
